--- a/Exploring the World/index.css
+++ b/Exploring the World/index.css
@@ -1,29 +1,1 @@
-.header{
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-  margin: 10px;
-  padding: 5px;
-}
-.header a{
-  text-decoration: none;
-}
-.nav-items ul{
-  list-style-type: none;
-  display: flex;
-}
-.nav-items > ul > li{
-  padding: 10px;
-}
-.card{
-  width : 200px;
-  border :1px solid black;
-  margin:10px;
-}
-.card > img{
-  width: 100%;
-}
-.restaurant-list{
-  display: flex;
-  flex-wrap: wrap;
-}
+/*see the styles.css for css*/
